--- a/css/product.css
+++ b/css/product.css
@@ -39,7 +39,6 @@
 }
 
 .product-actions > * {
-  flex: 1;
   text-align: center;
   color: #fff;
   border: none;
@@ -50,8 +49,15 @@
   cursor: pointer;
 }
 
+.product-actions > #product-quantity {
+  color: black;
+  border: 1px solid #ddd;
+  flex: 2;
+}
+
 .add-to-cart-btn {
   background-color: #0d7a42;
+  flex: 1;
 }
 
 .add-to-cart-btn:hover {
@@ -60,6 +66,7 @@
 
 .view-cart-btn {
   background-color: #007bff;
+  flex: 1;
 }
 
 .view-cart-btn:hover {
