--- a/css/cart.css
+++ b/css/cart.css
@@ -46,3 +46,28 @@
   color: #333;
   font-weight: bold;
 }
+
+.checkout-container {
+  max-width: 600px;
+  padding: 1rem;
+  background-color: #fff;
+  border: 1px solid #ddd;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+  margin: 2rem auto;
+}
+
+.checkout-container > .checkout-btn {
+  width: 100%;
+  padding: 1rem;
+  color: white;
+  background-color: #ff5722;
+  border: none;
+  cursor: pointer;
+  font-size: 1.25rem;
+  font-weight: bold;
+  border-radius: 5px;
+}
+
+.checkout-container > .checkout-btn:hover {
+  background-color: #e44414;
+}
